--- a/webcomp-webcams-main/src/scss/main.scss
+++ b/webcomp-webcams-main/src/scss/main.scss
@@ -170,7 +170,7 @@
   }
 
   .webcampopup img {
-    width: 100%;
+    width: 25%;
     height: auto;
     overflow: hidden;
     border-top-left-radius: 0.75em;
@@ -183,7 +183,7 @@
   }
 
   .search-input {
-    width: 100%;
+    width: 340px;
     padding: 10px;
     border: none;
     flex-grow: 1;
