--- a/public/buttonClass.css
+++ b/public/buttonClass.css
@@ -1,3 +1,9 @@
+/*
+ * SPDX-FileCopyrightText: NOI Techpark <digital@noi.bz.it>
+ *
+ * SPDX-License-Identifier: AGPL-3.0-or-later
+ */
+
 /* it sets the sidebar size and position */
 .sidebar-toggle {
   position: fixed;
